# lazy

./: AUTHORS  ChangeLog  Makefile.am  README  configure.in
include/: cddb_get.h  cdromtypes.h  digital.h  dsp.h  playcd.h  random.h  socket.h  utils.h  wrappers.h
man/: Makefile.am  lazy.1
src/: Makefile.am  cddb_get.c  digital.c  dsp.c  lazyrc  playcd.c  random.c  socket.c  socket.d  utils.c  wrappers.c
